# PYSEQM

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  Examples.html  Examples_old.html  Feature-BOMD.html  Feature-CIS-RPA.html  Feature-SCF.html  Feature-XLBOMD.html  Initialization.html  LICENSE  README.md  Will-Quick-start.html  __init__.py  _navbar.html  about.html  bomd.html  c2.xyz  c60.xyz  ch4.xyz  concepts.html  custom_kernels.html  databases.html  davidson_0723.py  excited_states.html  features copy.html  features.html  features_old.html  genindex.html  geometry_optimization.html  index.html  installation.html  installation_old.html  license.html  model_loss_graphs.html  modules.html  nodes.html  objects.inv  py-modindex.html  (+18 more)
.doctrees/: Feature-XLBOMD.doctree  Initialization.doctree  about.doctree  bomd.doctree  environment.pickle  excited_states.doctree  geometry_optimization.doctree  index.doctree  installation.doctree  quick_start.doctree  run_pyseqm.doctree  single_point_scf.doctree  user_guide.doctree
.ipynb_checkpoints/: LICENSE-checkpoint
PYSEQM.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Tests/: BOMD.0.xyz  BOMD.Info.0.txt  C36.xyz  C540.xyz  MD-compare_2.ipynb  Test00.ipynb  Test01.ipynb  Test02_sing_pr.ipynb  Test1.ipynb  Test1_aimd.0.xyz  Test1_aimd.Info.0.txt  Test2.ipynb  Test3.ipynb  Test3_BOMD.ipynb  Untitled.ipynb  XL-LR.0.xyz  XL-LR.Info.0.txt  XYZ.0.xyz  benzene_zero_pad.xyz
_sources/: Feature-XLBOMD.rst.txt  Initialization.rst.txt  about.rst.txt  databases.rst.txt  excited_states.rst.txt  features_old.rst.txt  installation.rst.txt  quick_start.rst.txt  run_pyseqm.rst.txt  single_point_scf.rst.txt
doc/: documentation.md
docs/: .gitignore  Examples.html  Quick_start.html  _navbar.html  about.html  concepts.html  custom_kernels.html  databases.html  features.html  genindex.html  index.html  installation.html  installation_old.html  license.html  model_loss_graphs.html  modules.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  seqm.html  seqm.seqm_functions.html  setup.html  user_guide.html
examples/: 1.dot  2-center-2electron.ipynb  Excited_States.ipynb  PM6_tests.ipynb  Test1_SinglePointProp.ipynb  Test1_SinglePointProp_FNS.ipynb  Test2_GeomOpt.ipynb  Test3_BOMD.ipynb  Test4_XL-BOMD.ipynb  Test5_KSA-XL-BOMD.ipynb  Test5_XL-BOMD-LR.ipynb  Test6_NormModes_Methanol.ipynb  Test7_low_rank_KSA_scf.ipynb  Test8_OpenShell.ipynb  Test8_PM6.ipynb  Test9_ExcitedStatesSinglePoint.ipynb  Test9_Excited_States.ipynb  XYZ.0.xyz  XYZ.1.xyz  XYZ.2.xyz  benzene.xyz  davidson copy 2.ipynb  davidson copy.ipynb  davidson.ipynb  davidson_optimization.ipynb  (+26 more)
(+588 files in other folders)
